tests/parser/snapshots/parser_tests__snapshots@decl-proc-pure.libsl.snap
---
source: tests/parser/main.rs
description: "// Input file:\nlibsl \"2.0.0\";\n\nlibrary decl_proc_pure;\n\npure proc pure() {}\n"
input_file: tests/parser/test-data/decl-proc-pure.libsl
---
Ok(File(
  loc: Span(
    start: 0,
    len: 60,
    file: "tests/parser/test-data/decl-proc-pure.libsl",
    line: Some(1),
    col: None,
  ),
  header: Some(Header(
    loc: Span(
      start: 0,
      len: 38,
      file: "tests/parser/test-data/decl-proc-pure.libsl",
      line: Some(1),
      col: None,
    ),
    libsl_version: "2.0.0",
    library_name: "decl_proc_pure",
    version: None,
    language: None,
    url: None,
  )),
  decls: [
    Decl(
      loc: Span(
        start: 41,
        len: 18,
        file: "tests/parser/test-data/decl-proc-pure.libsl",
        line: Some(5),
        col: None,
      ),
      kind: Proc(DeclProc(
        annotations: [],
        is_pure: true,
        is_method: false,
        name: Name(
          loc: Span(
            start: 51,
            len: 3,
            file: "tests/parser/test-data/decl-proc-pure.libsl",
            line: Some(5),
            col: Some(10),
          ),
          name: "pure",
        ),
        generics: [],
        params: [],
        ret_ty_expr: None,
        ty_constraints: [],
        body: Some(FunctionBody(
          contracts: [],
          stmts: [],
        )),
      )),
    ),
  ],
))
