tests/parser/snapshots/parser_tests__snapshots@decl-proc-top-level.libsl.snap
---
source: tests/parser/main.rs
description: "// Input file:\nlibsl \"2.0.0\";\n\nlibrary decl_proc_top_level;\n\nproc foo() {}\n"
input_file: tests/parser/test-data/decl-proc-top-level.libsl
---
Ok(File(
  loc: Span(
    start: 0,
    len: 59,
    file: "tests/parser/test-data/decl-proc-top-level.libsl",
    line: Some(1),
    col: None,
  ),
  header: Some(Header(
    loc: Span(
      start: 0,
      len: 43,
      file: "tests/parser/test-data/decl-proc-top-level.libsl",
      line: Some(1),
      col: None,
    ),
    libsl_version: "2.0.0",
    library_name: "decl_proc_top_level",
    version: None,
    language: None,
    url: None,
  )),
  decls: [
    Decl(
      loc: Span(
        start: 46,
        len: 12,
        file: "tests/parser/test-data/decl-proc-top-level.libsl",
        line: Some(5),
        col: None,
      ),
      kind: Proc(DeclProc(
        annotations: [],
        is_pure: false,
        is_method: false,
        name: Name(
          loc: Span(
            start: 51,
            len: 2,
            file: "tests/parser/test-data/decl-proc-top-level.libsl",
            line: Some(5),
            col: Some(5),
          ),
          name: "foo",
        ),
        generics: [],
        params: [],
        ret_ty_expr: None,
        ty_constraints: [],
        body: Some(FunctionBody(
          contracts: [],
          stmts: [],
        )),
      )),
    ),
  ],
))
