tests/parser/snapshots/parser_tests__snapshots@empty.libsl.snap
---
source: tests/parser/main.rs
description: "// Input file:\n"
input_file: tests/parser/test-data/empty.libsl
---
Ok(File(
  loc: Span(
    start: 0,
    len: 0,
    file: "tests/parser/test-data/empty.libsl",
    line: Some(1),
    col: None,
  ),
  header: None,
  decls: [],
))
