tests/parser/snapshots/parser_tests__snapshots@ty-arg-variance-specifier.libsl.snap
---
source: tests/parser/main.rs
description: "// Input file:\nlibsl \"1.0.0\";\n\nlibrary ty_arg_variance_specifier;\n\ntypealias Foo = HasVarianceSpecifier<in TypeArg>;\n"
input_file: tests/parser/test-data/ty-arg-variance-specifier.libsl
---
Ok(File(
  loc: Span(
    start: 0,
    len: 101,
    file: "tests/parser/test-data/ty-arg-variance-specifier.libsl",
    line: Some(1),
    col: None,
  ),
  header: Some(Header(
    loc: Span(
      start: 0,
      len: 49,
      file: "tests/parser/test-data/ty-arg-variance-specifier.libsl",
      line: Some(1),
      col: None,
    ),
    libsl_version: "1.0.0",
    library_name: "ty_arg_variance_specifier",
    version: None,
    language: None,
    url: None,
  )),
  decls: [
    Decl(
      loc: Span(
        start: 52,
        len: 48,
        file: "tests/parser/test-data/ty-arg-variance-specifier.libsl",
        line: Some(5),
        col: None,
      ),
      kind: TyAlias(DeclTyAlias(
        annotations: [],
        ty_name: QualifiedTyName(
          ty_name: FullName(
            components: [
              Name(
                loc: Span(
                  start: 62,
                  len: 2,
                  file: "tests/parser/test-data/ty-arg-variance-specifier.libsl",
                  line: Some(5),
                  col: Some(10),
                ),
                name: "Foo",
              ),
            ],
          ),
          generics: [],
        ),
        ty_expr: TyExpr(
          loc: Span(
            start: 68,
            len: 31,
            file: "tests/parser/test-data/ty-arg-variance-specifier.libsl",
            line: Some(5),
            col: Some(16),
          ),
          kind: Name(TyExprName(
            ty_name: FullName(
              components: [
                Name(
                  loc: Span(
                    start: 68,
                    len: 19,
                    file: "tests/parser/test-data/ty-arg-variance-specifier.libsl",
                    line: Some(5),
                    col: Some(16),
                  ),
                  name: "HasVarianceSpecifier",
                ),
              ],
            ),
            generics: Some([
              TyExpr(Some(Contravariant), TyExpr(
                loc: Span(
                  start: 92,
                  len: 6,
                  file: "tests/parser/test-data/ty-arg-variance-specifier.libsl",
                  line: Some(5),
                  col: Some(40),
                ),
                kind: Name(TyExprName(
                  ty_name: FullName(
                    components: [
                      Name(
                        loc: Span(
                          start: 92,
                          len: 6,
                          file: "tests/parser/test-data/ty-arg-variance-specifier.libsl",
                          line: Some(5),
                          col: Some(40),
                        ),
                        name: "TypeArg",
                      ),
                    ],
                  ),
                  generics: None,
                )),
              )),
            ]),
          )),
        ),
      )),
    ),
  ],
))
